# arbora

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.agents/: BIOLOGY_AUDIT.md  CONTEXT.md  LEARNING.md  METRICS_AUDIT.md
.github/workflows/: ci.yml
docs/: BIBLIOGRAPHY.md  LAMINA_KPIS.md
examples/: README.md
examples/arc/: agent.py  data.py  encoder.py  probes.py  train.py
examples/chat/: agent.py  env.py  harness.py  presets.py  probes.py  repl.py  reporter.py  reward.py  snapshots.py  stages.py  sweep_s1.py  sweep_t1.py  train.py  word_decoder.py
examples/minigrid/: ablation.py  agent.py  benchmark.py  encoder.py  env.py  harness.py  presets.py  probes.py  trace.py  train.py
examples/text_exploration/: __init__.py  baselines.py  data.py  diagnostics.py  explorer.ipynb  explorer.py  sweep.py  train.py  trainer.py
examples/text_exploration/.ipynb_checkpoints/: explorer-checkpoint.ipynb
examples/text_exploration/data/: common_words.txt
examples/text_exploration/sparse_vs_dense/: __init__.py  brown_cluster_baseline.py  compare.py  continual_learning.py  cross_scale_decay.py  cross_scale_ema.py  cross_scale_sigmoid.py  cross_scale_single_table.py  data.py  decay_sweep_1M.py  diagnostics.py  evaluation.py  modulation_ablation.py  multi_epoch_test.py  overnight_sigmoid.sh  overnight_sigmoid_inorder.sh  plot_within_run.py  random_indexing_baseline.py  shuffle_epoch_test.py  sparse_skipgram_hebbian_baseline.py  sparse_skipgram_hebbian_modulated_baseline.py  summarize_arb139.py  sweep_arb139.sh  sweep_arb139_ssh.sh  t1_t2_word.py  t1_word.py  viz.py  within_run_alpha_sweep.sh  within_run_simlex.py  word2vec_baseline.py
experiments/: run_step.py  run_sweep.py
experiments/configs/: exp0_comparison.json  exp0_tinystories.json  exp1_ceiling.json  exp2_diagnostics.json  exp2b_weight_stability.json  exp2c_short_window.json  exp2c_short_window_full.json  exp3_adaptive.json  step_default_5k.json  step_quick.json  step_tinystories_10k.json
experiments/results/: echo_rpe_partial.json  echo_sweep.json  echo_sweep_motor_batch_surp.json  echo_sweep_motor_full.json  echo_sweep_motor_m1_m2_surp.json  echo_sweep_motor_m2_m1_surp.json  echo_sweep_motor_motor_surp.json  echo_sweep_pfc3f.json  echo_sweep_rpe.json  sweep_capacity_2026-03-12.md  sweep_encoding_2026-03-12.md
experiments/scripts/: analyze_colset_ambiguity.py  bg_sweep.py  cortex_dashboard.py  cortex_repl.py  cortex_run.py  cortex_staged.py  decay_comparison.py  diagnose_decode.py  echo_sweep.py  ef_sweep.py  eval_apical_feedback.py  eval_dendritic_decoder.py  eval_hierarchy.py  eval_representation.py  eval_tokenization.py  feedback_ab.py  full_pipeline_l5apical.py  l5_apical_sweep.py  motor_sweep.py  motor_sweep2.py  poc_cortex.py  probe_l23.py  run_exp0.py  run_step.py  run_sweep.py  s2_probe.py  s2_sweep.py  s3_probe.py  sweep_200k.py  sweep_adaptive.py  sweep_capacity.py  sweep_embedding_sdr.py  sweep_encoding.py  sweep_final.py  sweep_fraction.py  sweep_gated.py  sweep_l23_segments.py  sweep_positional.py  sweep_r2.py  sweep_r2_params.py  (+8 more)
experiments/scripts/chat/: repl.py  sweep_s1.py  train.py
experiments/scripts/minigrid/: benchmark.py  diagnose.py  train_minigrid.py  visualize.py
notebooks/: PLAN.md  arb139_part1_word2vec_to_ssh.ipynb  arb139_part2_oja_and_unification.ipynb  arb139_part3_stability_primitives.ipynb  arb139_part4_metrics.ipynb  arb139_part5_implementation_and_blog.ipynb  build_part1.py  build_skeletons.py
scripts/: bootstrap.sh
src/: datasets.py  dump.py  encoder.py  experiment.py
src/arbor/: __init__.py  agent.py  basal_ganglia.py  config.py
src/arbor/agent/: __init__.py  base.py  chat.py  minigrid.py
src/arbor/cortex/: __init__.py  _numba_kernels.py  circuit.py  circuit_types.py  lamina.py  modulators.py  (+6 more)
src/arbora/: __init__.py  agent.py  basal_ganglia.py  config.py  sparse.py  thalamus.py
src/baselines/: compare.py  mini_gpt.py  pretrain.py  wrappers.py
src/slag/: core.py  train.py
src/step/: agent.py  basal_ganglia.py  config.py  data.py  db.py  decode.py  diagnostics.py  env.py  env_minigrid.py  environment.py  experiment.py  figures.py  metrics.py  model.py  neuron_group.py  normalize.py  protocol.py  runner.py  runs.py  sdr.py  train.py  training.py  wrappers.py
tests/: conftest.py  test_charbit.py  test_cortex.py  test_data_tinydialogues.py  test_db.py  test_environment.py  test_metrics.py  test_model.py  test_motor_probe.py  test_normalize.py  test_runner_probes.py  test_sdr.py  test_snapshot.py  test_training.py  test_wrappers.py  test_wrappers_torch.py
tests/cortex/: test_agranular.py  test_apical_feedback.py  test_basal_ganglia.py  test_circuit.py  test_hierarchy.py  test_l23_segments.py  test_l5_apical_segments.py  test_l5_lateral.py  test_l5_layer.py  test_lamina.py  test_motor.py  test_motor_agranular.py  test_plasticity_rule.py  test_region.py  test_representation.py  test_reward.py  test_thalamus.py  test_topology.py  test_vectorized_learning.py
tests/encoders/: test_charbit.py  test_encoders.py
tests/hippocampus/: test_ca1.py  test_ca3.py  test_dentate_gyrus.py  test_entorhinal.py  test_entorhinal_cortex.py  test_hippocampal_region.py
tests/minigrid/: conftest.py  test_ablation.py  test_agent.py  test_encoder.py  test_env.py  test_harness.py  test_motor_probe.py  test_presets.py  test_reward.py  test_smoke.py  test_trace.py
tests/probes/: conftest.py  test_arc_probes.py  test_bpc.py  test_canary.py  test_hippocampus_probe.py  test_hippocampus_retention.py  test_lamina.py  test_stability.py
tests/text_exploration/: test_data.py  test_diagnostics.py  test_explorer.py  test_trainer.py
tutorials/gemini/: routing.py
(+134 files in other folders)
