[project]
name = "step"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "transformers",
    "datasets",
    "numba>=0.64.0",
]

[project.optional-dependencies]
viz = ["matplotlib", "plotly"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff",
    "pre-commit",
    "ty",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/step"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.ty]

[[tool.ty.overrides]]
include = ["src/step/data.py"]

[tool.ty.overrides.rules]
unresolved-attribute = "ignore"
invalid-argument-type = "ignore"

[[tool.ty.overrides]]
include = ["experiments/scripts/**"]

[tool.ty.overrides.rules]
unresolved-import = "ignore"
unresolved-attribute = "ignore"
invalid-argument-type = "ignore"
invalid-assignment = "ignore"
invalid-type-form = "ignore"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests that require network access or are slow",
]
