[project]
name = "arbor"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "transformers",
    "datasets",
    "numba>=0.64.0",
]

[project.optional-dependencies]
viz = ["matplotlib", "plotly"]
minigrid = ["minigrid>=3.0", "gymnasium>=1.0"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff",
    "pre-commit",
    "ty",
    "scikit-learn>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/arbor"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.ty.rules]
# Motor/PFC attributes accessed on CorticalRegion-typed variables
# after `if s.motor:` runtime checks. Type narrowing not supported.
unresolved-attribute = "warn"
# Optional decoders/trackers accessed after runtime None guards
# that ty can't verify. All guarded at runtime.
call-non-callable = "warn"
invalid-argument-type = "warn"
# Pickle checkpoint load/save with untyped dict values
invalid-assignment = "warn"
unsupported-operator = "warn"
invalid-return-type = "warn"
no-matching-overload = "warn"

[[tool.ty.overrides]]
include = ["src/arbor/data.py"]

[tool.ty.overrides.rules]
unresolved-attribute = "ignore"
invalid-argument-type = "ignore"

[[tool.ty.overrides]]
include = ["src/arbor/viz/**"]

[tool.ty.overrides.rules]
# plotly is an optional dependency (viz extra), not installed in CI
unresolved-import = "ignore"

[[tool.ty.overrides]]
include = ["src/arbor/environment/minigrid.py", "src/arbor/encoders/minigrid.py", "src/arbor/agent/minigrid.py", "src/arbor/harness/minigrid/**"]

[tool.ty.overrides.rules]
# gymnasium/minigrid are optional deps, not installed in CI
unresolved-import = "ignore"

[[tool.ty.overrides]]
include = ["experiments/scripts/**"]

[tool.ty.overrides.rules]
unresolved-import = "ignore"
unresolved-attribute = "ignore"
invalid-argument-type = "ignore"
invalid-assignment = "ignore"
invalid-type-form = "ignore"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests that require network access or are slow",
]
