[project]
name = "arbora"
version = "0.1.0"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
dependencies = [
    "numpy",
    "transformers",
    "datasets",
    "numba>=0.61,<0.64",
    "llvmlite<0.46",
]

[project.optional-dependencies]
viz = ["matplotlib", "plotly"]
minigrid = ["minigrid>=3.0", "gymnasium>=1.0"]
arc = ["arc-agi>=0.9.6"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff",
    "pre-commit",
    "ty",
    "scikit-learn>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/arbora"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.ty.rules]
# Motor/PFC attributes accessed on CorticalRegion-typed variables
# after `if s.motor:` runtime checks. Type narrowing not supported.
unresolved-attribute = "warn"
# Optional decoders/trackers accessed after runtime None guards
# that ty can't verify. All guarded at runtime.
call-non-callable = "warn"
invalid-argument-type = "warn"
# Pickle checkpoint load/save with untyped dict values
invalid-assignment = "warn"
unsupported-operator = "warn"
invalid-return-type = "warn"
no-matching-overload = "warn"
# numpy bool_ indexing: ty doesn't recognize np.ndarray[bool_].__getitem__
not-subscriptable = "warn"

[[tool.ty.overrides]]
include = ["src/arbora/data.py"]

[tool.ty.overrides.rules]
unresolved-attribute = "ignore"
invalid-argument-type = "ignore"

[[tool.ty.overrides]]
include = ["src/arbora/viz/**"]

[tool.ty.overrides.rules]
# plotly is an optional dependency (viz extra), not installed in CI
unresolved-import = "ignore"

[[tool.ty.overrides]]
include = ["src/arbora/environment/minigrid.py", "src/arbora/encoders/minigrid.py", "src/arbora/agent/minigrid.py", "src/arbora/harness/minigrid/**"]

[tool.ty.overrides.rules]
# gymnasium/minigrid are optional deps, not installed in CI
unresolved-import = "ignore"

[[tool.ty.overrides]]
include = ["experiments/scripts/**"]

[tool.ty.overrides.rules]
unresolved-import = "ignore"
unresolved-attribute = "ignore"
invalid-argument-type = "ignore"
invalid-assignment = "ignore"
invalid-type-form = "ignore"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests that require network access or are slow",
]
